Add basic styles

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Когнитивные искажения. Игорь Альгин</title>
-
     <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+  </head>
 
-</body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
