--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Когнитивные искажения. Игорь Альгин</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Neucha&display=swap">
     <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header class="header section">
+      <h1><span class="text-primary">Когнитивные <br> искажения <br></span> в программировании</h1>
+      <img src="images/main.png" alt="Когнитивные искажения в программировании">
+
+      <article class="columns-2">
+        <div class="column">
+          <p>Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.</p>
+        </div>
+
+        <div class="column">
+          <p>Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.</p>
+          <p>Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.</p>
+          <a class="btn btn-primary" href="#5-cognitive-biases">Подробнее</a>
+        </div>
+      </article>
+    </header>
+
+    <main class="main section"></main>
+    <footer class="footer section"></footer>
   </body>
 </html>
